--- a/src/components/weatherApp/index.css
+++ b/src/components/weatherApp/index.css
@@ -167,8 +167,8 @@
   }
 }
 
-@media only screen and (min-width: 600px) {
+/* @media only screen and (min-width: 600px) {
   .weather-app-container-content {
     width: 100%;
   }
-}
+} */
